// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnFlow snapshots should render ColumnFlow 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Flow
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--single"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-19um8c2 ToggleButtonGroup ToggleButtonGroup--full-width"
          data-test-box=""
          data-test-toggle-button-group="flow"
        >
          <button
            class="ToggleButton ToggleButton--selected"
            data-test-toggle-button="0"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-default"
              height="12"
              name="FlowDefault"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Free form
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="1"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-vertical"
              height="12"
              name="FlowVertical"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Vertical
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="2"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-horizontal"
              height="12"
              name="FlowHorizontal"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Horizontal
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="3"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-grid"
              height="12"
              name="FlowGrid"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Grid
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnFlow snapshots should render when is horizontal but are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Flow
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--single"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-19um8c2 ToggleButtonGroup ToggleButtonGroup--full-width"
          data-test-box=""
          data-test-toggle-button-group="flow"
        >
          <button
            class="ToggleButton"
            data-test-toggle-button="0"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-default"
              height="12"
              name="FlowDefault"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Free form
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="1"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-vertical"
              height="12"
              name="FlowVertical"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Vertical
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="2"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-horizontal"
              height="12"
              name="FlowHorizontal"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Horizontal
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="3"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-grid"
              height="12"
              name="FlowGrid"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Grid
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnFlow snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Flow
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--single"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-19um8c2 ToggleButtonGroup ToggleButtonGroup--full-width"
          data-test-box=""
          data-test-toggle-button-group="flow"
        >
          <button
            class="ToggleButton"
            data-test-toggle-button="0"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-default"
              height="12"
              name="FlowDefault"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Free form
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="1"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-vertical"
              height="12"
              name="FlowVertical"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Vertical
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="2"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-horizontal"
              height="12"
              name="FlowHorizontal"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Horizontal
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="3"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-grid"
              height="12"
              name="FlowGrid"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Grid
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnFlow snapshots should render when wrap are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Flow
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--single"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-19um8c2 ToggleButtonGroup ToggleButtonGroup--full-width"
          data-test-box=""
          data-test-toggle-button-group="flow"
        >
          <button
            class="ToggleButton"
            data-test-toggle-button="0"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-default"
              height="12"
              name="FlowDefault"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Free form
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="1"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-vertical"
              height="12"
              name="FlowVertical"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Vertical
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton ToggleButton--selected"
            data-test-toggle-button="2"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-horizontal"
              height="12"
              name="FlowHorizontal"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Horizontal
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <button
            class="ToggleButton"
            data-test-toggle-button="3"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="flow-grid"
              height="12"
              name="FlowGrid"
              width="12"
            />
          </button>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Grid
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon"
            data-test-button-icon="wrap"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="wrap"
              height="12"
              name="Wrap"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Wrap
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
